security issues,add AES encryption for userDefault

--- a/Mark1/Podfile
+++ b/Mark1/Podfile
@@ -11,3 +11,4 @@ pod 'RTAlertView', '~> 0.0.6'
 pod 'ZGPullDragTableView', '~> 0.0.1'
 pod 'UIColorCategories', '~> 0.1.0'
 pod 'UIColor-Utilities', '~> 1.0.1'
+pod 'NSUserDefaults-AESEncryptor', '~> 0.0.4'
